--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-bourbon": "^4.2.8",
     "node-sass": "^3.7.0",
     "ora": "^0.2.0",
+    "resolve-url-loader": "^1.4.3",
     "sass-loader": "^3.2.0",
     "shelljs": "^0.6.0",
     "url-loader": "^0.5.7",
