--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment": "^2.13.0",
     "node-bourbon": "^4.2.8",
     "node-sass": "^3.7.0",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^0.2.0",
     "postcss-scss": "^0.1.8",
     "postcss-url": "^5.1.2",
