--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
-    "test": "",
+    "publish": "pm2 deploy ecosystem.json testing",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "start": "node app"
   },
