--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
+    "build": "node build/component.js && node build/build.js",
     "publish": "pm2 deploy ecosystem.json testing",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "start": "node app"
