--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "marked": "^0.3.5",
+    "multer": "^1.1.0",
     "vue": "^1.0.21"
   },
   "devDependencies": {
