--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radon-ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A Vue.js components lib",
   "author": "Awe <hilongjw@gmail.com>",
   "main": "dist/components/index.js",
@@ -11,7 +11,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "start": "node app"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vue-animated-list": "^1.0.2",
+    "moment": "^2.13.0"
+  },
   "devDependencies": {
     "vue": "^1.0.26",
     "babel-runtime": "^6.0.0",
@@ -41,7 +44,6 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.12.0",
     "json-loader": "^0.5.4",
-    "moment": "^2.13.0",
     "node-bourbon": "^4.2.8",
     "node-sass": "^3.7.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
