--- a/package.json
+++ b/package.json
@@ -2,6 +2,19 @@
   "name": "radon-ui",
   "version": "0.1.4",
   "description": "A Vue.js components lib",
+  "keywords": [
+    "radon-ui",
+    "radon ui",
+    "vue",
+    "vue ui",
+    "weex",
+    "vue-components",
+    "web-components",
+    "component",
+    "components",
+    "framework",
+    "frontend"
+  ],
   "author": "Awe <hilongjw@gmail.com>",
   "main": "dist/components/index.js",
   "scripts": {
@@ -10,6 +23,11 @@
     "publish": "pm2 deploy ecosystem.json testing",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "start": "node app"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luojilab/radon-ui"
   },
   "dependencies": {
     "vue-animated-list": "^1.0.2",
