--- a/package.json
+++ b/package.json
@@ -34,15 +34,13 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
-    "vue": "^1.0.26",
-    "babel-runtime": "^6.0.0",
-    "marked": "^0.3.5",
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
+    "babel-runtime": "^6.0.0",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     "cssnext": "^1.8.4",
@@ -62,6 +60,7 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.12.0",
     "json-loader": "^0.5.4",
+    "marked": "^0.3.5",
     "node-bourbon": "^4.2.8",
     "node-sass": "^3.7.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
@@ -73,6 +72,7 @@
     "sass-loader": "^3.2.0",
     "shelljs": "^0.6.0",
     "url-loader": "^0.5.7",
+    "vue": "^1.0.26",
     "vue-animated-list": "^1.0.2",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
@@ -83,6 +83,7 @@
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0",
-    "webpack-merge": "^0.8.3"
+    "webpack-merge": "^0.8.3",
+    "webpack-sources": "^0.1.2"
   }
 }
