--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-runtime": "^6.0.0",
+    "babili": "0.0.4",
+    "babili-webpack-plugin": "0.0.2",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     "cssnext": "^1.8.4",
