--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "http-proxy-middleware": "^0.12.0",
     "json-loader": "^0.5.4",
     "marked": "^0.3.5",
+    "multer": "^1.2.0",
     "node-bourbon": "^4.2.8",
     "node-sass": "^3.7.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
