--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "radon-ui",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "A Vue.js components lib",
   "keywords": [
     "radon-ui",
     "radon ui",
     "vue",
     "vue ui",
-    "weex",
-    "vue-components",
-    "web-components",
+    "vue components",
+    "web components",
     "component",
     "components",
     "framework",
