--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radon-ui",
-  "version": "0.3.0",
+  "version": "0.5.0",
   "description": "A Vue.js components lib",
   "keywords": [
     "radon-ui",
@@ -14,7 +14,10 @@
     "framework",
     "frontend"
   ],
-  "author": "Awe <hilongjw@gmail.com>",
+  "author": [{
+    "name":"Awe", 
+    "email": "<hilongjw@gmail.com>"
+  }],
   "scripts": {
     "start": "node app",
     "dev": "cross-env NODE_ENV=development supervisor -w server,app.js app",
