--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radon-ui",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "A Vue.js components lib",
   "keywords": [
     "radon-ui",
@@ -35,7 +35,6 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "vue": "^2.1.0",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
@@ -48,6 +47,7 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
+    "cssnano": "^3.9.1",
     "eslint": "^3.7.1",
     "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^2.0.5",
@@ -79,6 +79,7 @@
     "mocha": "^3.1.0",
     "moment": "^2.17.1",
     "opn": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
     "postcss-url": "^5.1.2",
@@ -88,6 +89,7 @@
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
+    "vue": "^2.1.0",
     "vue-loader": "^10.0.0",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1",
